--- a/style.css
+++ b/style.css
@@ -1,49 +1,73 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  font-family: 'Nunito', sans-serif;
-}
-
-h1 {
-  text-align: center;
-  font-size: 200%;
-}
-
-h2 {
-  text-align: center;
-  font-weight: 100;
-  font-size: 110%;
-}
-
-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-
+  font-family: "Nunito", sans-serif;
 }
 
 nav li {
   display: inline-block;
   margin-top: 0;
-  margin-right: 12px;
+  /* margin-right: 12px; */
   margin-left: 12px;
   margin-bottom: 0;
   text-decoration: underline;
 }
 
+/* .nav-header li {
+  display: flex;
+  width: 100%;
+} */
+
 .blue-button {
   background-color: blue;
-  text-decoration: none !important;
+  text-decoration: none;
   color: white;
   padding: 0.5em;
   border-radius: 6px;
-  width: 8em;
+  /* width: 8em; */
   text-align: center;
   display: inline-block;
-} 
+}
 
-.signup-form form input[type=submit] {
+.hero-header {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 5%;
+  text-align: left;
+}
+
+.hero {
+  margin: auto;
+}
+
+h1 {
+  /* text-align: center; */
+  font-size: 125%;
+
+  /* line-height: -2; */
+  color: red;
+}
+
+h2 {
+  /* text-align: center; */
+  font-weight: 100;
+  font-size: 110%;
+}
+/* 
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+} */
+
+.signup-form form input[type="submit"] {
   border: none;
   background-color: blue;
-  text-decoration: none !important;
+  text-decoration: none;
   color: white;
   padding: 0.5em;
   border-radius: 6px;
